ui(gsm): ajustes de layout e adição de campos para controle de números gsm
