# apps/api/src/HomePit.Domain/Gsm/GsmNumberPlan.cs
@@ -1,0 +1,7 @@
+namespace HomePit.Domain.Gsm;
+
+public enum GsmNumberPlan
+{
+    PrePago,
+    PosPago
+}
